--- a/client/src/components/templates/Templates.css
+++ b/client/src/components/templates/Templates.css
@@ -1,27 +1,37 @@
-.header {
-    width: 100%;
-    height: 20%;
+.page {
+    display: flex;
+    flex-direction: column;
+}
+
+.page > .content {
+    display: flex;
+    flex-direction: column;
+    flex: 20 20 auto;
+}
+
+.page > .header {
     background-color: #D32323;
     display: flex;
+    flex: 5 5 auto;
 }
 
-.header .content {
-    text-align: center;
-    margin: auto;
-}
-
-.footer {
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 10%;
-    text-align: center;
-    position: flex;
-}
-
-.footer .content {
+.header > .content {
     margin: auto;
     text-align: center;
-    padding: auto;
-    height: 10%;
+}
+
+.page > .footer {
+    display: flex;
+    flex-direction: column;
+    flex: 1 1 auto;
+}
+
+.footer > .content {
+    margin: auto;
+    text-align: center;
+    flex: 10 10 auto;
+}
+
+.footer > .ui.divider {
+    flex: 1 1 auto;
 }
