--- a/client/src/components/post/Post.css
+++ b/client/src/components/post/Post.css
@@ -1,15 +1,16 @@
-form {
+.post {
     width: 100%;
+    height: 100%;
     display: flex;
     flex-flow: row wrap;
 }
 
-form > .column {
+.post > .column {
     flex: 1 1 auto;
 }
 
-form > .content {
-    flex: 2 2 auto;
+.post > form {
+    flex: 1 1 auto;
 }
 
 .content > .title {
