--- a/client/src/components/templates/Templates.css
+++ b/client/src/components/templates/Templates.css
@@ -12,7 +12,8 @@
 .page > .header {
     background-color: #D32323;
     display: flex;
-    flex: 5 5 auto;
+    flex: 1 1 auto;
+    min-height: 100px;
 }
 
 .header > .content {
@@ -30,6 +31,7 @@
     margin: auto;
     text-align: center;
     flex: 10 10 auto;
+    padding-bottom: 15px;
 }
 
 .footer > .ui.divider {
