--- a/client/src/components/post/Post.css
+++ b/client/src/components/post/Post.css
@@ -5,10 +5,6 @@
     flex-flow: row wrap;
 }
 
-.post > .column {
-    flex: 1 1 auto;
-}
-
 .post > form {
     flex: 1 1 auto;
 }
@@ -21,5 +17,10 @@
 .content .ui.header {
     flex: 1 1 auto;
     text-align: center;
-    padding: 20px;
+    padding-top: 20px;
+}
+
+form > h2 {
+    padding-left: 0 !important;
+    padding-bottom: 0 !important;
 }
